IOS overflow-x bug fix

--- a/yume.css
+++ b/yume.css
@@ -177,6 +177,7 @@ html {
     scroll-behavior: smooth;
     font-size: 18px;
     line-height: 1.5;
+    overflow-x: hidden;
 }
 
 body {
